--- a/src/fi/tnie/db/source/FACTORY_IMPLEMENTATION.in
+++ b/src/fi/tnie/db/source/FACTORY_IMPLEMENTATION.in
@@ -4,9 +4,8 @@ public class {{schema-factory-impl}}
     implements {{schema-factory}} {
 
 	static {
-		fi.tnie.db.gen.ent.LiteralCatalog.getInstance();
+		{{literal-catalog-name}}.getInstance();
 	}
-    
     
 {{factory-method-list}}
 }
