Add some test suites and fix Sakila tests

--- a/test/log4j.properties
+++ b/test/log4j.properties
@@ -1,21 +1,18 @@
 
 
-log4j.logger.fi.tnie=DEBUG, console
+# log4j.rootLogger=DEBUG, file, console
+log4j.rootLogger=DEBUG, file
 
-# log4j.appender.test=org.apache.log4j.ConsoleAppender
-# log4j.appender.test.layout=org.apache.log4j.PatternLayout
-# log4j.appender.test.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
+log4j.appender.file=org.apache.log4j.RollingFileAppender
+log4j.appender.file.maxFileSize=10000KB
+log4j.appender.file.maxBackupIndex=5
+log4j.appender.file.File=../log/test-suite.log
+# log4j.appender.file.threshold=debug
+log4j.appender.file.layout=org.apache.log4j.PatternLayout
+log4j.appender.file.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
 
-log4j.logger.fi.tnie.db.DBMetaTestSuite=DEBUG, file, console
+
 
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
 log4j.appender.console.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
-
-log4j.appender.file=org.apache.log4j.RollingFileAppender
-log4j.appender.file.maxFileSize=1000KB
-log4j.appender.file.maxBackupIndex=5
-log4j.appender.file.File=log/test-suite.log
-log4j.appender.file.threshold=debug
-log4j.appender.file.layout=org.apache.log4j.PatternLayout
-log4j.appender.file.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
