Add classpath entries for out/sakila/src & MySQL JDBC driver

--- a/.classpath
+++ b/.classpath
@@ -4,11 +4,13 @@
 	<classpathentry kind="src" path="tools"/>
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="src" path="out/pg/src"/>
+	<classpathentry kind="src" path="out/sakila/src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Apache Log4J"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/3"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Apache CSV"/>
 	<classpathentry kind="lib" path="lib/util.jar"/>
 	<classpathentry kind="lib" path="lib/postgresql-9.2-1002.jdbc4.jar"/>
+	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.18-bin.jar"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
