--- a/.classpath
+++ b/.classpath
@@ -15,6 +15,7 @@
 	<classpathentry kind="src" path="mysql/samples/src/java"/>
 	<classpathentry kind="src" path="mysql/samples/src/out"/>
 	<classpathentry kind="src" path="mysql/samples/src/test"/>
+	<classpathentry kind="src" path="pg/pp/src/out"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Apache Log4J"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/3"/>
