--- a/src/com/appspot/relaxe/source/INTERFACE.in
+++ b/src/com/appspot/relaxe/source/INTERFACE.in
@@ -209,6 +209,10 @@ public interface {{table-interface}}
 				// {{query-element-getter-body}}
 			}
 			
+			
+			// {{per-type-query-element-getter-list}}
+			
+			
 			public static class Builder 
 				implements com.appspot.relaxe.ent.EntityQueryElement.Builder<
 					Attribute, 
@@ -236,6 +240,8 @@ public interface {{table-interface}}
 						com.appspot.relaxe.ent.value.EntityKey<Attribute, Reference, Type, {{table-interface}}, Holder, Factory, MetaData, Content, ?, ?, ?, ?, ?, ?, ?, ?, ?> key) {											
 					// {{query-element-getter-body}}
 				}
+				
+				// {{per-type-query-element-getter-list}}
 
 				@Override
 				public <
