Add some DDL expressions

--- a/config/mysql/sakila.properties
+++ b/config/mysql/sakila.properties
@@ -7,5 +7,5 @@ user: sakila
 password: password
 nullCatalogMeansCurrent: false
 nullNamePatternMatchesAll: false
-
+sessionVariables=sql_mode\='ANSI'
 
