--- a/config/mysql/samples.properties
+++ b/config/mysql/samples.properties
@@ -7,3 +7,4 @@ user: samples
 password: password
 nullCatalogMeansCurrent: false
 nullNamePatternMatchesAll: false
+sessionVariables=sql_mode\='ANSI'
