--- a/.classpath
+++ b/.classpath
@@ -19,6 +19,8 @@
 	<classpathentry kind="src" path="impl/pg/pagila/src/main"/>
 	<classpathentry kind="src" path="impl/pg/pagila/src/out"/>
 	<classpathentry kind="src" path="impl/pg/pagila/src/test"/>
+	<classpathentry kind="src" path="impl/pg/pp/src/test"/>
+	<classpathentry kind="src" path="impl/pg/pp/src/out"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/3"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Apache CSV"/>
@@ -27,6 +29,7 @@
 	<classpathentry kind="lib" path="lib/jdbc/mysql-connector-java/mysql-connector-java-5.1.27.jar"/>
 	<classpathentry kind="lib" path="lib/jdbc/postgresql/postgresql-9.3-1100-jdbc4.jar"/>
 	<classpathentry kind="lib" path="lib/slf4j-api-1.7.5.jar"/>
-	<classpathentry kind="lib" path="lib/logback-core-1.0.13.jar"/>
+	<classpathentry kind="lib" path="lib/runtime/slf4j-log4j12-1.7.5.jar"/>
+	<classpathentry kind="lib" path="lib/runtime/log4j-1.2.17.jar"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
