Make JDBC URL port for test cases configurable via properties

--- a/config/mysql/sakila.properties
+++ b/config/mysql/sakila.properties
@@ -3,6 +3,8 @@
 # MySQL JDBC driver properties to use with Sakila test database 
 #
 
+# jdbc.url.port: 3306
+
 user: sakila
 password: password
 nullCatalogMeansCurrent: false
