--- a/config/mariadb/sakila.properties
+++ b/config/mariadb/sakila.properties
@@ -3,6 +3,8 @@
 # MariaDB JDBC driver properties to use with Sakila test database 
 #
 
+jdbc.url.port: 3306
+
 user: sakila
 password: password
 nullCatalogMeansCurrent: false
