--- a/config/mysql/samples.properties
+++ b/config/mysql/samples.properties
@@ -3,6 +3,8 @@
 # MySQL JDBC driver properties to use with MySQL samples database 
 #
 
+# jdbc.url.port: 3306
+
 user: samples
 password: password
 nullCatalogMeansCurrent: false
