--- a/config/pg/pagila.properties
+++ b/config/pg/pagila.properties
@@ -3,6 +3,8 @@
 # PostgreSQL JDBC driver properties to use with Pagila test database 
 #
 
+# jdbc.url.port: 5432
+
 user: pagila
 password: password
 
